[gd_scene load_steps=6 format=3 uid="uid://ci2kxxkgaxayi"]

[ext_resource type="PackedScene" uid="uid://dnpdxfudm46fs" path="res://scenes/player.tscn" id="1_6o8lu"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_eabmm"]
[ext_resource type="PackedScene" uid="uid://cfwojy3oqewwk" path="res://scenes/pipe_spawner.tscn" id="2_3582x"]
[ext_resource type="Texture2D" uid="uid://c6cgmwgxf701o" path="res://assets/cloud.PNG" id="4_qyx6w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fbxh1"]
size = Vector2(512, 36)

[node name="Game" type="Node2D"]
position = Vector2(0, -3)
script = ExtResource("1_eabmm")

[node name="Ground" type="Node2D" parent="."]
z_index = -1
z_as_relative = false

[node name="Area2D" type="Area2D" parent="Ground"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/Area2D"]
position = Vector2(2, 382)
shape = SubResource("RectangleShape2D_fbxh1")

[node name="Sprite2D" type="Sprite2D" parent="Ground/Area2D"]
position = Vector2(-18, 417)
rotation = 3.16254
scale = Vector2(1.23029, 0.287147)
texture = ExtResource("4_qyx6w")

[node name="Player" parent="." instance=ExtResource("1_6o8lu")]

[node name="PipeSpawner" parent="." instance=ExtResource("2_3582x")]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RestartUI" type="Panel" parent="UI"]
process_mode = 2
visible = false
layout_mode = 0
offset_left = -275.0
offset_top = -404.0
offset_right = 304.0
offset_bottom = 435.0

[node name="ScoreText" type="Label" parent="UI/RestartUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -37.5
offset_top = 21.0
offset_right = 19.5
offset_bottom = 44.0
grow_horizontal = 2
text = "Score:"

[node name="Button" type="Button" parent="UI/RestartUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.5
offset_top = -254.0
offset_right = 32.5
offset_bottom = -223.0
grow_horizontal = 2
grow_vertical = 0
text = "Restart"

[node name="HighestScoreValue" type="Label" parent="UI/RestartUI"]
layout_mode = 0
offset_left = 271.0
offset_top = 123.0
offset_right = 307.0
offset_bottom = 146.0
text = "0
"

[node name="HighestScore" type="Label" parent="UI/RestartUI"]
layout_mode = 0
offset_left = 222.0
offset_top = 95.0
offset_right = 328.0
offset_bottom = 118.0
text = "Highest Score:"

[node name="ScoreValue" type="Label" parent="UI"]
layout_mode = 0
offset_left = -5.0
offset_top = -356.0
offset_right = 35.0
offset_bottom = -326.0
theme_override_font_sizes/font_size = 21
text = "0
"

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="body_entered" from="Ground/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="player_hit" from="Player" to="." method="_on_player_player_hit"]
[connection signal="player_scored" from="Player" to="." method="_on_player_player_scored"]
[connection signal="pressed" from="UI/RestartUI/Button" to="." method="_on_button_pressed"]
